// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view-form Renders \`view-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-name-field-stub
    label="Title"
    name="title"
    required=""
    value="View title"
  />
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Description
          </label>
          <input
            name="description"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub
    value="true"
  />
  <periodic-refresh-field-stub
    label="Periodic refresh"
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--chips v-select--is-multi v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Group tags
          </label>
          <div
            class="v-select__selections"
          >
            <span
              class="v-chip--select v-chip v-chip--clickable v-chip--no-color v-chip--removable theme--light v-size--default"
              tabindex="-1"
            >
              <span
                class="v-chip__content"
              >
                View tag
                <button
                  aria-label="Close"
                  class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                  style="font-size: 18px;"
                  type="button"
                >
                  cancel
                </button>
              </span>
            </span>
            <input
              autocomplete="off"
              tags=""
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--clear"
            >
              <button
                aria-label="Clear Group tags"
                class="v-icon notranslate v-icon--link material-icons theme--light"
                tabindex="-1"
                type="button"
              >
                clear
              </button>
            </div>
          </div>
          <input
            type="hidden"
            value="View tag"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Choose a group, or create a new one
          </label>
          <input
            autocomplete="off"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="group"
            type="hidden"
            value="[object Object]"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-form Renders \`view-form\` with default props 1`] = `
<div
  class="layout column"
>
  <c-name-field-stub
    label="Title"
    name="title"
    required=""
  />
  <div
    class="v-input theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Description
          </label>
          <input
            name="description"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub />
  <periodic-refresh-field-stub
    label="Periodic refresh"
    name="periodic_refresh"
    periodicrefresh="[object Object]"
  />
  <div
    class="v-input theme--light v-text-field v-select v-select--chips v-select--is-multi v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Group tags
          </label>
          <div
            class="v-select__selections"
          >
            <input
              autocomplete="off"
              tags=""
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div />
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input theme--light v-text-field v-select v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Choose a group, or create a new one
          </label>
          <input
            autocomplete="off"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="group"
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
